[gd_scene load_steps=4 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Materials/Dissolve.material" type="Material" id=2]
[ext_resource path="res://Assets/Ablaze.png" type="Texture" id=3]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite_Text" type="Sprite" parent="."]
material = ExtResource( 2 )
position = Vector2( 505, 280 )
texture = ExtResource( 3 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 57.0
margin_top = 77.0
margin_right = 212.0
margin_bottom = 185.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 1

[node name="Label2" type="Label" parent="GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 155.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Position:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSlider" type="HSlider" parent="GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 155.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = -1.0
max_value = 1.0
step = 0.001
page = 0.0
value = -1.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
scrollable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Label" type="Label" parent="GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 38.0
margin_right = 155.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Size:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSlider2" type="HSlider" parent="GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 155.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 1.0
step = 0.01
page = 0.0
value = 0.1
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
scrollable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="Button" type="Button" parent="GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 76.0
margin_right = 155.0
margin_bottom = 96.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Run from Start Once"
flat = false
align = 1

[node name="Button2" type="Button" parent="GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 100.0
margin_right = 155.0
margin_bottom = 120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Run from Start Forever"
flat = false
align = 1

[node name="Button3" type="Button" parent="GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 124.0
margin_right = 155.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Stop"
flat = false
align = 1

[node name="Button4" type="Button" parent="GridContainer"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 148.0
margin_right = 155.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Reseed noise texture"
flat = false
align = 1

[connection signal="value_changed" from="GridContainer/HSlider" to="." method="_on_current_position_value_changed"]
[connection signal="value_changed" from="GridContainer/HSlider2" to="." method="_on_size_value_changed"]
[connection signal="pressed" from="GridContainer/Button" to="." method="_on_run_from_start_pressed"]
[connection signal="pressed" from="GridContainer/Button2" to="." method="_on_run_forever_pressed"]
[connection signal="pressed" from="GridContainer/Button3" to="." method="_on_stop_pressed"]
[connection signal="pressed" from="GridContainer/Button4" to="." method="_on_reseed_noise_pressed"]
